# dailypages

./: .env.example  .gitignore  README.md  package-lock.json  package.json  proxy.ts  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/personalize/: page.tsx
app/plan/: page.tsx
app/progress/: page.tsx
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_ai_columns.py
backend/app/: auth.py  config.py  db.py  logging_config.py  main.py  rate_limit.py  storage.py  tasks.py  worker.py
backend/app/ai/: embeddings.py  explain.py  llm.py  prompts.py  rag.py
backend/app/ai/agents/: planner.py  quiz.py  rewriter.py  semantic.py  style.py
backend/app/models/: __init__.py  base.py  book.py  chapter.py  plan.py  progress.py  session.py  user.py
backend/app/routers/: books.py  health.py  plans.py  sessions.py  users.py
backend/app/schemas/: book.py  common.py  plan.py  session.py  user.py
backend/app/services/: analysis.py  chapter_detector.py  chapter_filter.py  epub_extractor.py  extracted.py  parsing.py  pdf_extractor.py  plan_as_is.py  session_gen.py
backend/scripts/: fix_session_intros.py  smoke_ai.py  trial_pipeline.py
components/: app-shell.tsx  auth-controls.tsx  auth-provider.tsx  book-cover.tsx  icons.tsx  theme-provider.tsx  topbar.tsx  tweaks-panel.tsx
lib/: api-config.ts  api-server.ts  api-types.ts  api.ts  mock-data.ts  prefs-store.ts  types.ts  use-token.ts  utils.ts
(+22 files in other folders)
